kubernetes/apps/nextcloud/immich/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: nextcloud-immich
      app.kubernetes.io/name: machine-learning
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: valkey
              app.kubernetes.io/instance: nextcloud-immich-valkey
              app.kubernetes.io/name: nextcloud-immich-valkey
      ports:
        - port: 6379
          protocol: TCP
    - to: # For model downloading
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - "${HAPROXY_WHITELIST}"
      ports:
        - port: 443
          protocol: TCP
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: main
              app.kubernetes.io/instance: nextcloud-immich
              app.kubernetes.io/name: server
      ports:
        - port: 3003
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-server
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: nextcloud-immich
      app.kubernetes.io/name: server
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: valkey
              app.kubernetes.io/instance: nextcloud-immich-valkey
              app.kubernetes.io/name: nextcloud-immich-valkey
      ports:
        - port: 6379
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: main
              app.kubernetes.io/instance: nextcloud-immich
              app.kubernetes.io/name: machine-learning
      ports:
        - port: 3003
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: immich-postgres-v18
      ports:
        - port: 5432
          protocol: TCP
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 2283
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8081
        - port: 8082
